--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ psycopg2==2.9.9
 psycopg2-binary==2.9.9
 pycodestyle==2.10.0
 pytest==7.4.3
+pytest-flask==1.3.0
 python-dotenv==1.0.0
 SQLAlchemy==2.0.23
 tomli==2.0.1
